--- a/network.yml
+++ b/network.yml
@@ -20,7 +20,7 @@ Parameters:
     Type: String
     Default: 10.0.0.0/24
 
-  PublicSubnet2CIDR:
+  PublicSubneT2CIDR:
     Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
     Type: String
     Default: 10.0.1.0/24
@@ -30,7 +30,7 @@ Parameters:
     Type: String
     Default: 10.0.2.0/24
 
-  PrivateSubnet2CIDR:
+  PrivateSubneT2CIDR:
     Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
     Type: String
     Default: 10.0.3.0/24
@@ -69,12 +69,12 @@ Resources:
         - Key: Name
           Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
 
-  PublicSubnet2:
+  PublicSubneT2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [1, !GetAZs ""]
-      CidrBlock: !Ref PublicSubnet2CIDR
+      CidrBlock: !Ref PublicSubneT2CIDR
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
@@ -91,12 +91,12 @@ Resources:
         - Key: Name
           Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
 
-  PrivateSubnet2:
+  PrivateSubneT2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       AvailabilityZone: !Select [1, !GetAZs ""]
-      CidrBlock: !Ref PrivateSubnet2CIDR
+      CidrBlock: !Ref PrivateSubneT2CIDR
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
@@ -124,7 +124,7 @@ Resources:
     Type: AWS::EC2::NatGateway
     Properties:
       AllocationId: !GetAtt NatGateway2EIP.AllocationId
-      SubnetId: !Ref PublicSubnet2
+      SubnetId: !Ref PublicSubneT2
 
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
@@ -148,11 +148,11 @@ Resources:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet1
 
-  PublicSubnet2RouteTableAssociation:
+  PublicSubneT2RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet2
+      SubnetId: !Ref PublicSubneT2
 
   PrivateRouteTable1:
     Type: AWS::EC2::RouteTable
@@ -190,11 +190,11 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NatGateway2
 
-  PrivateSubnet2RouteTableAssociation:
+  PrivateSubneT2RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId: !Ref PrivateRouteTable2
-      SubnetId: !Ref PrivateSubnet2
+      SubnetId: !Ref PrivateSubneT2
 
 Outputs:
   VPC:
@@ -223,13 +223,13 @@ Outputs:
 
   PublicSubnets:
     Description: A list of the public subnets
-    Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
+    Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubneT2]]
     Export:
       Name: !Sub ${EnvironmentName}-PUB-NETS
 
   PrivateSubnets:
     Description: A list of the private subnets
-    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
+    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubneT2]]
     Export:
       Name: !Sub ${EnvironmentName}-PRIV-NETS
 
@@ -239,9 +239,9 @@ Outputs:
     Export:
       Name: !Sub ${EnvironmentName}-PUB1-SN
 
-  PublicSubnet2:
+  PublicSubneT2:
     Description: A reference to the public subnet in the 2nd Availability Zone
-    Value: !Ref PublicSubnet2
+    Value: !Ref PublicSubneT2
     Export:
       Name: !Sub ${EnvironmentName}-PUB2-SN
 
@@ -251,8 +251,8 @@ Outputs:
     Export:
       Name: !Sub ${EnvironmentName}-PRI1-SN
 
-  PrivateSubnet2:
+  PrivateSubneT2:
     Description: A reference to the private subnet in the 2nd Availability Zone
-    Value: !Ref PrivateSubnet2
+    Value: !Ref PrivateSubneT2
     Export:
       Name: !Sub ${EnvironmentName}-PRI2-SN
